[package]
name = "arxiv_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
roxmltree = "0.16.0"
chrono = "0.4.23"
markdown = "0.3"